--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </pre>
 
     <div class="linkedin">
-        <a href="https://linkedin.com/in/yourprofile" target="_blank">My LinkedIn</a>
+        <a href="https://www.linkedin.com/in/magnus-jr/" target="_blank">My LinkedIn</a>
     </div>
 
     <footer>
@@ -171,4 +171,5 @@
         <br>
     </footer>
 </body>
+
 </html>
