--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <nav>
             <a href="#papers">Papers</a>
             <a href="#write-ups">Write-ups</a>
-            <a href="#programming">Programming</a>
+            <a href="https://github.com/0x00bit?tab=repositories">Programming</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -172,4 +172,5 @@
 </body>
 
 </html>
+
 
