--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <br/>
         <nav>
             <a href="#papers">Papers</a>
-            <a href="#write-ups">Write-ups</a>
+            <a href="writeups.html">Write-ups</a>
             <a href="https://github.com/0x00bit?tab=repositories">Programming</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
@@ -172,5 +172,6 @@
 </body>
 
 </html>
+
 
 
