--- a/writeups.html
+++ b/writeups.html
@@ -71,10 +71,11 @@
     <h1>Write-ups</h1>
     <p>Here are some write-ups for various CTF challenges I've participated in. Feel free to explore and learn!</p>
     <ul>
-        <li><a href="writeups/ctf1.html" style="color: rgb(255, 0, 0);">0day Write-up</a></li>
+        <li><a href="0day/index.html" style="color: rgb(255, 0, 0);">0day Write-up</a></li>
     </ul>
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
