--- a/writeups.html
+++ b/writeups.html
@@ -73,9 +73,13 @@
     <ul>
         <li><a href="0day/index.html" style="color: rgb(255, 0, 0);">0day Write-up</a></li>
     </ul>
+    <ul>
+        <li><a href="billing-thm/index.html" style="color: rgb(255, 0, 0);">0day Write-up</a></li>
+    </ul>
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 </body>
 
 </html>
+
