Fix HTML structure and update write-up links

--- a/writeups.html
+++ b/writeups.html
@@ -74,7 +74,7 @@
         <li><a href="0day/index.html" style="color: rgb(255, 0, 0);">0day Write-up</a></li>
     </ul>
     <ul>
-        <li><a href="billing-thm/index.html" style="color: rgb(255, 0, 0);">0day Write-up</a></li>
+        <li><a href="billing-thm/index.html" style="color: rgb(255, 0, 0);">Billing Write-up</a></li>
     </ul>
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
@@ -82,4 +82,5 @@
 </body>
 
 </html>
+
 
