--- a/billing-thm/index.html
+++ b/billing-thm/index.html
@@ -66,7 +66,7 @@
 
 <div class="container">
 
-<h1>BILLING_BOX</h1>
+<a src="https://tryhackme.com/room/billing" style"text-decoration: none"><h1>BILLING_BOX</h1></a>
 
 <p>Hello folks, what’s up? Are you guys ready for one more write-up? This is the second one I’m posting here, so let’s get started!</p>
 
