Modify navigation links in index.html
Updated navigation links and preserved existing styles.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="tagline">DevOps | Comp. Networks | CTF Player</div>
         <br/>
         <nav>
-            <a href="#papers">Papers</a>
+            <a href="#articles.html">Articles</a>
             <a href="writeups.html">Write-ups</a>
             <a href="https://github.com/0x00bit?tab=repositories">Programming</a>
             <a href="#projects">Projects</a>
@@ -213,6 +213,7 @@
 </body>
     
 </html>
+
 
 
 
