--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="tagline">DevOps | Comp. Networks | CTF Player</div>
         <br/>
         <nav>
-            <a href="#articles.html">Articles</a>
+            <a href="https://0x00bit.github.io/articles.html">Articles</a>
             <a href="writeups.html">Write-ups</a>
             <a href="https://github.com/0x00bit?tab=repositories">Programming</a>
             <a href="#projects">Projects</a>
@@ -199,6 +199,7 @@
 </body>
     
 </html>
+
 
 
 
